--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Web Mahjong — Demo</title>
+  <title>Web 麻雀 — Demo</title>
   <link rel="stylesheet" href="style.css">
   <meta name="description" content="ブラウザで遊べる麻雀（CPU対戦）。本格風UI、アニメーションつき。">
   <script defer src="script.js"></script>
@@ -62,3 +62,4 @@
   </footer>
 </body>
 </html>
+
